apps/services/website/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-website
  namespace: services
  labels:
    app: nginx-website
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-website
  template:
    metadata:
      labels:
        app: nginx-website
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: nginx-website
        image: harbor.technolab.cloud/library/nginx-website:v1.0.0
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 101
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
      imagePullSecrets:
      - name: reg-creds
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      tolerations: []
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: nginx-website
              topologyKey: kubernetes.io/hostname
