apps/services/website/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: nginx-website
  name: nginx-website
  namespace: services
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  rules:
  - host: ebrianne.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-website
          servicePort: 8080
  - host: www.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-website
          servicePort: 8080
  - host: technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-website
          servicePort: 8080
  tls:
  - hosts:
    - ebrianne.technolab.cloud
    - technolab.cloud
    - www.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
